# some-roast-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: agent.rs  main.rs  memory.rs
src/agents/: ask.rs  mod.rs  roast.rs
src/agents/roast/: channel.rs  microsoft.rs  mod.rs  reply.rs  truth.rs  user.rs
src/bot/: handler.rs  mod.rs
src/bot/commands/: ask.rs  mod.rs
src/bot/handlers/: channel.rs  microsoft.rs  mod.rs  reply.rs  truth.rs  user.rs
