[package]
name = "some-roast-bot"
version = "0.1.2"
edition = "2024"
authors = ["Luca Mandrelli <luca.mandrelli@icloud.com>"]

[dependencies]
poise = { 
    version = "0.6.1", 
}
serenity = {
    version = "0.12",
}
tokio = {
    version = "1.50",
    features = ["rt-multi-thread", "macros"]
}
dotenv = "0.15"
regex = "1"
futures-util = "0.3"
rig-core = { version = "0.32", features = ["rmcp"] }
rmcp = { version = "0.16", features = ["client", "macros", "transport-streamable-http-client-reqwest"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
